Mon Oct 21 23:06:49 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (AM_PACKAGE_VERSION_PATTERN): New global.
	(scan_configure): Use it.  Test version.test.

Sun Oct 20 12:08:46 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Explicitly pass distdir to
	dist-hook make.  From Tatu Ylonen.

	* m4/strtod.m4: Use correct cache variable.

Thu Oct 17 13:45:20 1996  Tom Tromey  <tromey@cygnus.com>

	Lisp fixes from Erick Branderhorst:
	* m4/lispdir.m4: Define lispdir, not LISPDIR.
	* lisp.am: Added missing \.

Fri Oct 11 00:44:49 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_source_transform): Only rewrite c, yacc, lex
	to use de-ansi-fication.
	(scan_configure): Handle multi-line AC_REPLACE_FUNCS.  Test
	libobj5.test.

	* automake.in (handle_lib_objects): Added $lex_seen argument.
	Error if lex file used but LEXLIB not seen.
	(handle_programs): Ditto.
	(handle_yacc_lex_cxx): Define LEXLIB variable.
	(handle_lib_objects): Don't allow LEXLIB to end up on dependency
	list.

Thu Oct 10 16:12:38 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_gettext): Moved check for SUBDIRS and
	ABOUT-NLS here.

	* automake.in (handle_configure): Run mkinstalldirs under
	$(SHELL).
	(handle_yacc_lex_cxx): Run interlock under $(SHELL).

	* remake-subd.am (Makefile): Run config.status under $(SHELL).
	* remake-hdr.am (stamp-h): Run config.status under $(SHELL).
	* remake.am (Makefile): Run config.status under $(SHELL).
	(config.status): Ditto.

	* automake.in (read_am_file): Removed UNMAINT code.
	(file_contents_with_transform): Ditto.
	* m4/maintainer.m4: Removed bogus UNMAINT code.

	* automake.in (handle_emacs_lisp): Define EMACS variable.
	(handle_emacs_lisp): Make sure EMACS is in environment when
	elisp-comp is run.

	* elisp-comp: Exit with status 1 if usage bad.
	Use "emacs -q".  Use EMACS environment variable if set (unless set
	to t).

	* m4/lispdir.m4: Unset EMACS if it is set to `t'.
