@@ -2934,6 +2934,20 @@ sub scan_configure
 	    $package_version_line = $.;
 	}
 
+	# This is like AM_INIT_AUTOMAKE, but doesn't actually set the
+	# package and version number.  (This might change in the
+	# future).  Yes, I'm not above hacking Automake so it works
+	# well with other GNU tools -- that is actually the point.
+	if (/AM_INIT_GUILE_MODULE/)
+	{
+	    $seen_make_set = 1;
+	    $seen_package = 1;
+	    $seen_version = 1;
+	    $seen_arg_prog = 1;
+	    $seen_prog_install = 1;
+	    @config_aux_path = ('..');
+	}
+
 	# Some things required by Automake.
 	$seen_make_set = 1 if /AC_PROG_MAKE_SET/;
 	$seen_arg_prog = 1 if /AC_ARG_PROGRAM/;
