@@ -1,5 +1,7 @@
 Mon Oct 21 23:06:49 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (scan_configure): Handle AM_INIT_GUILE_MODULE.
+
 	* automake.in (AM_PACKAGE_VERSION_PATTERN): New global.
 	(scan_configure): Use it.  Test version.test.
 
